# connect-the-bots

./: .envrc.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.beads/: issues.jsonl
crates/attractor-agent/: Cargo.toml
crates/attractor-agent/src/: fidelity.rs  lib.rs  loop_detection.rs  prompt_builder.rs  subagent.rs
crates/attractor-cli/: Cargo.toml
crates/attractor-cli/src/: main.rs
crates/attractor-cli/src/commands/: decompose.rs  generate.rs  launch.rs  mod.rs  plan.rs  run.rs  scaffold.rs
crates/attractor-dot/: Cargo.toml
crates/attractor-dot/src/: ast.rs  duration_serde.rs  lib.rs  parser.rs
crates/attractor-llm/: Cargo.toml
crates/attractor-llm/src/: anthropic.rs  client.rs  gemini.rs  lib.rs  openai.rs  provider.rs  types.rs
crates/attractor-pipeline/: Cargo.toml
crates/attractor-pipeline/src/: checkpoint.rs  condition.rs  edge_selection.rs  engine.rs  events.rs  goal_gate.rs  graph.rs  handler.rs  interviewer.rs  lib.rs  retry.rs  stylesheet.rs  transforms.rs  validation.rs
crates/attractor-pipeline/src/handlers/: codergen_handler.rs  manager.rs  mod.rs  parallel.rs  tool_handler.rs  wait_human.rs
crates/attractor-pipeline/tests/: integration.rs
crates/attractor-tools/: Cargo.toml
crates/attractor-tools/src/: environment.rs  lib.rs  local_env.rs  profiles.rs  tool.rs  truncation.rs
crates/attractor-tools/src/builtin/: edit_file.rs  glob.rs  grep.rs  mod.rs  read_file.rs  shell.rs  write_file.rs
crates/attractor-types/: Cargo.toml
crates/attractor-types/src/: lib.rs
crates/attractor-web/: Cargo.toml  Leptos.toml  package.json
crates/attractor-web/public/js/: xterm-setup.js
crates/attractor-web/src/: app.rs  lib.rs  main.rs
crates/attractor-web/src/components/: approval_bar.rs  chat_input.rs  document_viewer.rs  execution_node.rs  execution_panel.rs  folder_picker.rs  layout.rs  markdown_pane.rs  markdown_render.rs  mod.rs  project_sidebar.rs  terminal.rs
crates/attractor-web/src/pages/: editor.rs  execution.rs  mod.rs  prompt.rs
crates/attractor-web/src/server/: db.rs  documents.rs  execute.rs  generate.rs  mod.rs  pipeline.rs  projects.rs  stream.rs  terminal.rs
crates/attractor-web/style/: main.scss
docs/: accept-execute-c4-dot.md  accept-execute-c4.md  accept-execute-flow.md  cli-reference.md  emergence-analysis.md  guide.md  task-verification.md  web-interface-plan.md
pipelines/: attractor-e0n.dot  attractor-kbu.dot  attractor-qsb.dot  attractor-s6a.dot  build-beads-integration.dot
templates/: attractor.md  epic-runner.dot  pas.md  plan-to-execute.dot  prd-template.md  spec-template.md
