[package]
name = "attractor-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous coding agent loop: LLM + tool execution cycle"

[dependencies]
attractor-types = { path = "../attractor-types" }
attractor-llm = { path = "../attractor-llm" }
attractor-tools = { path = "../attractor-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = "3"
