[package]
name = "attractor-pipeline"
version = "0.1.0"
edition = "2021"
description = "Pipeline execution engine, node handlers, validation, and edge selection"

[dependencies]
attractor-types = { path = "../attractor-types" }
attractor-dot = { path = "../attractor-dot" }
attractor-llm = { path = "../attractor-llm" }
attractor-tools = { path = "../attractor-tools" }
attractor-agent = { path = "../attractor-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
attractor-dot = { path = "../attractor-dot" }
attractor-types = { path = "../attractor-types" }
