[package]
name = "attractor-tools"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Tool trait, built-in tools, and execution environment for Attractor agents"

[dependencies]
attractor-types = { path = "../attractor-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
