[package]
name = "attractor-types"
version = "0.1.0"
edition = "2021"
description = "Shared types, errors, context, and outcome for the Attractor pipeline engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
