[package]
name = "attractor-web"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", default-features = false }
leptos_router = { version = "0.7", default-features = false }
leptos_meta = { version = "0.7", default-features = false }
leptos_config = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", optional = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = "2"
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true }
gloo-net = { version = "0.6", features = ["eventsource"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
attractor-pipeline = { path = "../attractor-pipeline", optional = true }
attractor-dot = { path = "../attractor-dot", optional = true }
attractor-types = { path = "../attractor-types", optional = true }
chrono = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:gloo-net",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures",
    "dep:lazy_static",
    "dep:attractor-pipeline",
    "dep:attractor-dot",
    "dep:attractor-types",
    "dep:chrono",
]

[package.metadata.leptos]
output-name = "attractor-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-default-features = false
